--- a/JSVM/H264Extension/data/encoder.cfg
+++ b/JSVM/H264Extension/data/encoder.cfg
@@ -4,12 +4,12 @@
 OutputFile              test.264               # Bitstream file
 FrameRate               30.0                   # Maximum frame rate [Hz]
 MaxDelay                1200.0                 # Maximum structural delay [ms]
-FramesToBeEncoded       17                     # Number of frames (at input frame rate)
+FramesToBeEncoded       1 #0 #150                    # Number of frames (at input frame rate)
 QLevelEst               0                      # QualityLevel Estimation
 
 #============================== MCTF ==============================
-GOPSize                 16                     # GOP Size (at maximum frame rate)
-IntraPeriod             16                     # Intra Period
+GOPSize                 4                      # GOP Size (at maximum frame rate)
+IntraPeriod             96                     # Intra Period
 NumberReferenceFrames   1                      # Number of reference pictures
 BaseLayerMode           1                      # Base layer mode (0:Scalable,
                                                #   1:AVC compatible, 2:AVC w subseq SEI)
@@ -31,9 +31,8 @@ LoopFilterAlphaC0Offset 0                      # AlphaOffset(-6..+6): valid rang
 LoopFilterBetaOffset    0                      # BetaOffset (-6..+6): valid range
 
 #============================== LAYER DEFINITION ==============================
-NumLayers               2                        # Number of layers
+NumLayers               1                        # Number of layers
 LayerCfg                ..\..\..\data\layer0.cfg # Layer configuration file
-LayerCfg                ..\..\..\data\layer1.cfg # Layer configuration file
 
 #============================== ADAPTIVE GOP STRUCTURE ==============================
 UseAdaptiveGOP		    0                      # Use adaptive GOP structure (0: no, 1: yes)
