Add FMO functionality (heartles@icu.ac.kr)

--- a/JSVM/H264Extension/src/lib/H264AVCCommonLib/H264AVCCommonLibStatic.vcproj
+++ b/JSVM/H264Extension/src/lib/H264AVCCommonLib/H264AVCCommonLibStatic.vcproj
@@ -164,6 +164,9 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\CFMO.cpp">
+			</File>
+			<File
 				RelativePath="FGSCoder.cpp">
 				<FileConfiguration
 					Name="Debug|Win32">
