--- a/JSVM/H264Extension/data/encoder.cfg
+++ b/JSVM/H264Extension/data/encoder.cfg
@@ -4,7 +4,7 @@
 OutputFile              test.264               # Bitstream file
 FrameRate               30.0                   # Maximum frame rate [Hz]
 MaxDelay                1200.0                 # Maximum structural delay [ms]
-FramesToBeEncoded       1 #0 #150                    # Number of frames (at input frame rate)
+FramesToBeEncoded       150                    # Number of frames (at input frame rate)
 QLevelEst               0                      # QualityLevel Estimation
 
 #============================== MCTF ==============================
