--- a/Validation/SimuDataBase/Long_term/ESS_PIC/cfg/ESS_PIC_L0.cfg
+++ b/Validation/SimuDataBase/Long_term/ESS_PIC/cfg/ESS_PIC_L0.cfg
@@ -6,7 +6,7 @@ SourceHeight    336                                               # Input  frame
 FrameRateIn     30                                                # Input  frame rate [Hz]
 FrameRateOut    30                                                # Output frame rate [Hz]
 InputFile       orig/ESS_PIC_384x336_30.yuv                            # Input  file
-ReconFile       tmp/ESS_PIC_rec_l0.yuv                           # Reconstructed file
+ReconFile       tmp/ESS_PIC_rec_L0.yuv                           # Reconstructed file
 SymbolMode      1                       			# 0=CAVLC, 1=CABAC
 
 #============================== DECOMPOSITION (MCTF) ==============================
@@ -34,4 +34,4 @@ BaseLayerMode   3                                                 # Base quality
 DecodeLoops     0                                                 # Decoding loops (0:single, 1:multiple for LP, 2:multiple)
 
 MotionInfoMode  1                                                 # Motion Info Mode (0:no, 1:load, 2:save )
-MotionInfoFile  mot/ESS_PIC_l0.mot                               # Motion Info File
+MotionInfoFile  mot/ESS_PIC_L0.mot                               # Motion Info File
