--- a/Validation/SimuDataBase/Long_term/ESS_PIC/cfg/ESS_PIC_L1.cfg
+++ b/Validation/SimuDataBase/Long_term/ESS_PIC/cfg/ESS_PIC_L1.cfg
@@ -6,7 +6,7 @@ SourceHeight  560                                               # Input  frame h
 FrameRateIn   30                                                # Input  frame rate [Hz]
 FrameRateOut  30                                                # Output frame rate [Hz]
 InputFile     orig/ESS_PIC_640x560_30.yuv                            # Input  file
-ReconFile     tmp/ESS_PIC_l1.yuv                           # Reconstructed file
+ReconFile     tmp/ESS_PIC_rec_L1.yuv                           # Reconstructed file
 SymbolMode      1                       			# 0=CAVLC, 1=CABAC
 
 #============================== DECOMPOSITION (MCTF) ==============================
@@ -34,7 +34,7 @@ BaseQuality     3                       # Base quality level (0, 1, 2, 3) (0: no
 DecodeLoops     0                       # Decoding loops (0:single, 1:mult for LP, 2:multiple)
 
 MotionInfoMode  1                       # Motion Info Mode (0:no, 1:load, 2:save )
-MotionInfoFile  mot/ESS_PIC_l1.mot                               # Motion Info File
+MotionInfoFile  mot/ESS_PIC_L1.mot                               # Motion Info File
 
 UseESS          2                       # ESS seq
 ESSPicParamFile crop/crew_pictlev.txt                    # picture-level cropping parameters (ignored when ESS !=2)
