--- a/Validation/SimuDataBase/Short_term/T1/cfg/T1_L2.cfg
+++ b/Validation/SimuDataBase/Short_term/T1/cfg/T1_L2.cfg
@@ -7,7 +7,7 @@ FrameRateIn     30                      # Input  frame rate [Hz]
 FrameRateOut    30                      # Output frame rate [Hz]
 InputFile       orig/T1_352x288_30.yuv     # Input  file
 ReconFile       tmp/T1_rec_L2.yuv # Reconstructed file
-SymbolMode	0			#0=CAVLC
+SymbolMode      0		                    # (0-CAVLC, 1=CABAC)
 
 #============================== DECOMPOSITION (MCTF) ==============================
 UpdateStep      0                       # Update Step (0: no 1: yes)
