ARFGS test modified MVC config files corrected

--- a/Validation/SimuDataBase/Short_term/ARFGS/cfg/ARFGS.cfg
+++ b/Validation/SimuDataBase/Short_term/ARFGS/cfg/ARFGS.cfg
@@ -30,6 +30,7 @@ LoopFilterAlphaC0Offset 0                      # AlphaOffset(-6..+6): valid rang
 LoopFilterBetaOffset    0                      # BetaOffset (-6..+6): valid range
 
 #============================== LAYER DEFINITION ==============================
-NumLayers               1                      # Number of layers
+NumLayers               2                      # Number of layers
 LayerCfg                cfg/ARFGS_L0.cfg       # Layer configuration file
+LayerCfg                cfg/ARFGS_L1.cfg       # Layer configuration file
 
