Weighted prediction (encoder weight estimation)

--- a/JSVM/H264Extension/data/MVC.cfg
+++ b/JSVM/H264Extension/data/MVC.cfg
@@ -48,3 +48,7 @@ IterSearchRange         8         # Search range for iterations (0: normal)
 LoopFilterDisable       0         # Loop filter idc (0: on, 1: off, 2: on except for slice boundaries)
 LoopFilterAlphaC0Offset 0         # AlphaOffset(-6..+6): valid range
 LoopFilterBetaOffset    0         # BetaOffset (-6..+6): valid range
+
+#============================== WEIGHTED PREDICTION =================================
+WeightedPrediction      0                      # Sample Weighting Mode IP Slice (0:disable, 1:enable)
+WeightedBiprediction    0                      # Sample Weighting Mode B  Slice (0:disable, 1:explicit, 2:implicit)
