--- a/JSVM/H264Extension/data/encoder.cfg
+++ b/JSVM/H264Extension/data/encoder.cfg
@@ -4,12 +4,12 @@
 OutputFile              test.264               # Bitstream file
 FrameRate               30.0                   # Maximum frame rate [Hz]
 MaxDelay                1200.0                 # Maximum structural delay [ms]
-FramesToBeEncoded       150                    # Number of frames (at input frame rate)
+FramesToBeEncoded       3                    # Number of frames (at input frame rate)
 QLevelEst               0                      # QualityLevel Estimation
 
 #============================== MCTF ==============================
-GOPSize                 4                      # GOP Size (at maximum frame rate)
-IntraPeriod             96                     # Intra Period
+GOPSize                 2                      # GOP Size (at maximum frame rate)
+IntraPeriod             -1                     # Intra Period
 NumberReferenceFrames   1                      # Number of reference pictures
 BaseLayerMode           1                      # Base layer mode (0:Scalable,
                                                #   1:AVC compatible, 2:AVC w subseq SEI)
@@ -20,7 +20,7 @@ SearchFuncFullPel       3                      # Search function full pel
                                                #   (0:SAD, 1:SSE, 2:HADAMARD, 3:SAD-YUV) 
 SearchFuncSubPel        2                      # Search function sub pel
                                                #   (0:SAD, 1:SSE, 2:HADAMARD) 
-SearchRange             96                     # Search range (Full Pel)
+SearchRange             32                     # Search range (Full Pel)
 BiPredIter              4                      # Max iterations for bi-pred search
 IterSearchRange         8                      # Search range for iterations (0: normal)
 
@@ -31,10 +31,15 @@ LoopFilterAlphaC0Offset 0                      # AlphaOffset(-6..+6): valid rang
 LoopFilterBetaOffset    0                      # BetaOffset (-6..+6): valid range
 
 #============================== LAYER DEFINITION ==============================
-NumLayers               1                        # Number of layers
-LayerCfg                ..\..\..\data\layer0.cfg # Layer configuration file
+NumLayers               2                        # Number of layers
+LayerCfg                layer0.cfg # Layer configuration file
+LayerCfg                layer1.cfg # Layer configuration file
 
 #============================== ADAPTIVE GOP STRUCTURE ==============================
 UseAdaptiveGOP		    0                      # Use adaptive GOP structure (0: no, 1: yes)
 AGSModeDecision         0                      # Mode decision (0: AGS Coding, 1: Mode Dec)
 AGSGOPModeFile          ags_mode.dat           # GOP mode file
+
+#============================== WEIGHTED PREDICTION =================================
+WeightedPrediction      0                      # Sample Weighting Mode IP Slice (0:disable, 1:enable)
+WeightedBiprediction    0                      # Sample Weighting Mode B  Slice (0:disable, 1:explicit, 2:implicit)
