Downconvert tools cleaning (Thomson)

--- a/JSVM/H264Extension/src/tools/DownConvert/DownConvertStatic.vcproj
+++ b/JSVM/H264Extension/src/tools/DownConvert/DownConvertStatic.vcproj
@@ -168,7 +168,7 @@
 				RelativePath="..\..\..\include\DownConvert.inl">
 			</File>
 			<File
-				RelativePath="..\..\..\include\DownConvertTmm.inl">
+				RelativePath="..\..\..\include\DownConvertTools.inl">
 			</File>
 		</Filter>
 		<Filter
