FGS motion refinement: decoder side improvement

--- a/JSVM/H264Extension/data/layer0.cfg
+++ b/JSVM/H264Extension/data/layer0.cfg
@@ -1,17 +1,17 @@
 # Layer Configuration File
 
 #============================== INPUT / OUTPUT ==============================
-SourceWidth     176                     # Input  frame width
-SourceHeight    144                     # Input  frame height
+SourceWidth     352                     # Input  frame width
+SourceHeight    288                     # Input  frame height
 FrameRateIn     15                      # Input  frame rate [Hz]
 FrameRateOut    15                      # Output frame rate [Hz]
-InputFile       E:\sequences\svc\BUS_QCIF15.yuv     # Input  file
+InputFile       \\bslinux2\data\svc\CITY_CIF15.yuv     # Input  file
 ReconFile       rec_layer0.yuv          # Reconstructed file
 SymbolMode      0                       # 0=CAVLC, 1=CABAC
 
 #============================== DECOMPOSITION (MCTF) ==============================
 UpdateStep      0                       # Update Step (0: no 1: yes)
-ClosedLoop      2                       # Closed-loop control (0:off, 1:at H rate, 2: at L+H rate)
+ClosedLoop      0                       # Closed-loop control (0:off, 1:at H rate, 2: at L+H rate)
 AdaptiveQP      1                       # QP selection (0: standard, 1: adaptive)
 UseIntra        1                       # Intra mode usage (0: off, 1: on)
 FRExt           1                       # FREXT mode (0:off, 1:on)
@@ -19,7 +19,7 @@ FRExt           1                       # FREXT mode (0:off, 1:on)
 #============================== CODING (MCTF) ==============================
 MaxDeltaQP      1                       # Max. absolute delta QP
 QP              35.0                    # Quantization parameters
-NumFGSLayers    0.0                     # Number of FGS layers ( 1 layer - ~ delta QP = 6 )
+NumFGSLayers    2.0                     # Number of FGS layers ( 1 layer - ~ delta QP = 6 )
 
 #============================== CONTROL (MCTF) ==============================
 MeQP0           30.00                   # QP for motion estimation / mode decision (stage 0)
@@ -35,3 +35,5 @@ DecodeLoops     0                       # Decoding loops (0:single, 1:mult for L
 
 MotionInfoMode  0                       # Motion Info Mode (0:no, 1:load, 2:save )
 MotionInfoFile  layer0.mot              # Motion Info File
+
+FGSMotion		1
