--- a/JSVM/H264Extension/data/encoder.cfg
+++ b/JSVM/H264Extension/data/encoder.cfg
@@ -2,16 +2,16 @@
 
 #============================== GENERAL ==============================
 OutputFile              test.264               # Bitstream file
-FrameRate               30.0                   # Maximum frame rate [Hz]
+FrameRate               15.0                   # Maximum frame rate [Hz]
 MaxDelay                1200.0                 # Maximum structural delay [ms]
-FramesToBeEncoded       3                    # Number of frames (at input frame rate)
+FramesToBeEncoded       17                    # Number of frames (at input frame rate)
 QLevelEst               0                      # QualityLevel Estimation
 
 #============================== MCTF ==============================
-GOPSize                 2                      # GOP Size (at maximum frame rate)
+GOPSize                 8                      # GOP Size (at maximum frame rate)
 IntraPeriod             -1                     # Intra Period
 NumberReferenceFrames   1                      # Number of reference pictures
-BaseLayerMode           1                      # Base layer mode (0:Scalable,
+BaseLayerMode           0                      # Base layer mode (0:Scalable,
                                                #   1:AVC compatible, 2:AVC w subseq SEI)
 
 #============================== MOTION SEARCH ==============================
@@ -31,9 +31,9 @@ LoopFilterAlphaC0Offset 0                      # AlphaOffset(-6..+6): valid rang
 LoopFilterBetaOffset    0                      # BetaOffset (-6..+6): valid range
 
 #============================== LAYER DEFINITION ==============================
-NumLayers               2                        # Number of layers
+NumLayers               1                        # Number of layers
 LayerCfg                layer0.cfg # Layer configuration file
-LayerCfg                layer1.cfg # Layer configuration file
+#LayerCfg                layer1.cfg # Layer configuration file
 
 #============================== ADAPTIVE GOP STRUCTURE ==============================
 UseAdaptiveGOP		    0                      # Use adaptive GOP structure (0: no, 1: yes)
