NOKIA: JVT-R056, JVT-Q066

--- a/JSVM/H264Extension/data/encoder.cfg
+++ b/JSVM/H264Extension/data/encoder.cfg
@@ -2,7 +2,7 @@
 
 #============================== GENERAL ==============================
 OutputFile              test.264               # Bitstream file
-FrameRate               15.0                   # Maximum frame rate [Hz]
+FrameRate               30                   # Maximum frame rate [Hz]
 MaxDelay                1200.0                 # Maximum structural delay [ms]
 FramesToBeEncoded       17                    # Number of frames (at input frame rate)
 QLevelEst               0                      # QualityLevel Estimation
@@ -31,10 +31,10 @@ LoopFilterAlphaC0Offset 0                      # AlphaOffset(-6..+6): valid rang
 LoopFilterBetaOffset    0                      # BetaOffset (-6..+6): valid range
 
 #============================== LAYER DEFINITION ==============================
-NumLayers               1                        # Number of layers
-LayerCfg                layer0.cfg # Layer configuration file
-#LayerCfg                layer1.cfg # Layer configuration file
-
+NumLayers               3                        # Number of layers
+LayerCfg                ..\..\..\data\layer0.cfg # Layer configuration file
+LayerCfg                ..\..\..\data\layer1.cfg # Layer configuration file
+LayerCfg                ..\..\..\data\layer2.cfg # Layer configuration file
 #============================== ADAPTIVE GOP STRUCTURE ==============================
 UseAdaptiveGOP		    0                      # Use adaptive GOP structure (0: no, 1: yes)
 AGSModeDecision         0                      # Mode decision (0: AGS Coding, 1: Mode Dec)
@@ -43,3 +43,8 @@ AGSGOPModeFile          ags_mode.dat           # GOP mode file
 #============================== WEIGHTED PREDICTION =================================
 WeightedPrediction      0                      # Sample Weighting Mode IP Slice (0:disable, 1:enable)
 WeightedBiprediction    0                      # Sample Weighting Mode B  Slice (0:disable, 1:explicit, 2:implicit)
+
+LARDO                   1                      # LARDO Enable
+
+#============ NON_REQUIRED =================
+NonRequiredEnable	    0                      # NonRequiredSEI enable (0:disable, 1:enable)
