--- a/JSVM/H264Extension/data/layer3.cfg
+++ b/JSVM/H264Extension/data/layer3.cfg
@@ -34,3 +34,7 @@ DecodeLoops     1                       # Decoding loops (0:single, 1:mult for L
 
 MotionInfoMode  2                       # Motion Info Mode (0:no, 1:load, 2:save )
 MotionInfoFile  layer3.mot              # Motion Info File
+
+#=========== IDR ===========
+IDRPeriod      0                        # IDR period (should be integral times of GOP size)
+                                        # UseAdaptiveGOP should be 0
