--- a/JSVM/H264Extension/data/layer1.cfg
+++ b/JSVM/H264Extension/data/layer1.cfg
@@ -5,7 +5,7 @@ SourceWidth     352                     # Input  frame width
 SourceHeight    288                     # Input  frame height
 FrameRateIn     30                      # Input  frame rate [Hz]
 FrameRateOut    30                      # Output frame rate [Hz]
-InputFile       E:\sequences\svc\BUS_CIF30.yuv     # Input  file
+InputFile       E:\CREW_352x288_30_orig_01.yuv     # Input  file
 ReconFile       rec_layer1.yuv          # Reconstructed file
 SymbolMode      1                       # 0=CAVLC, 1=CABAC
 
@@ -19,7 +19,7 @@ FRExt           1                       # FREXT mode (0:off, 1:on)
 #============================== CODING (MCTF) ==============================
 MaxDeltaQP      1                       # Max. absolute delta QP
 QP              33.0                    # Quantization parameters
-NumFGSLayers    1.0                     # Number of FGS layers ( 1 layer - ~ delta QP = 6 )
+NumFGSLayers    0                       # Number of FGS layers ( 1 layer - ~ delta QP = 6 )
 
 #============================== CONTROL (MCTF) ==============================
 MeQP0           30.00                   # QP for motion estimation / mode decision (stage 0)
@@ -35,3 +35,8 @@ DecodeLoops     0                       # Decoding loops (0:single, 1:mult for L
 
 MotionInfoMode  2                       # Motion Info Mode (0:no, 1:load, 2:save )
 MotionInfoFile  layer1.mot              # Motion Info File
+PLR             10                       # Packet Loss Rate
+
+#=========== IDR ===========
+IDRPeriod      0                        # IDR period (should be integral times of GOP size)
+                                        # UseAdaptiveGOP should be 0
