--- a/JSVM/H264Extension/data/layer2.cfg
+++ b/JSVM/H264Extension/data/layer2.cfg
@@ -1,11 +1,11 @@
 # Layer Configuration File
 
 #============================== INPUT / OUTPUT ==============================
-SourceWidth     176                     # Input  frame width
-SourceHeight    144                     # Input  frame height
-FrameRateIn     15                      # Input  frame rate [Hz]
-FrameRateOut    15                      # Output frame rate [Hz]
-InputFile       E:\sequences\svc\City_QCIF15.yuv     # Input  file
+SourceWidth     528                     # Input  frame width
+SourceHeight    432                     # Input  frame height
+FrameRateIn     30                      # Input  frame rate [Hz]
+FrameRateOut    30                      # Output frame rate [Hz]
+InputFile       E:\CREW_528x432_30_orig_01.yuv     # Input  file
 ReconFile       rec_layer2.yuv # Reconstructed file
 SymbolMode      1                       # 0=CAVLC, 1=CABAC
 
@@ -37,3 +37,8 @@ MotionInfoMode  0                       # Motion Info Mode (0:no, 1:load, 2:save
 MotionInfoFile  layer2.mot              # Motion Info File
 
 BaseLayerId     0                       # base layer
+PLR             20                       # Packet Loss Rate
+
+#=========== IDR ===========
+IDRPeriod      0                        # IDR period (should be integral times of GOP size)
+                                        # UseAdaptiveGOP should be 0
