--- a/JSVM/H264Extension/data/encoder.cfg
+++ b/JSVM/H264Extension/data/encoder.cfg
@@ -2,16 +2,15 @@
 
 #============================== GENERAL ==============================
 OutputFile              test.264               # Bitstream file
-FrameRate               30                   # Maximum frame rate [Hz]
+FrameRate               60                     # Maximum frame rate [Hz]
 MaxDelay                1200.0                 # Maximum structural delay [ms]
-FramesToBeEncoded       17                    # Number of frames (at input frame rate)
-QLevelEst               0                      # QualityLevel Estimation
+FramesToBeEncoded       600                    # Number of frames (at input frame rate)
 
 #============================== MCTF ==============================
-GOPSize                 8                      # GOP Size (at maximum frame rate)
+GOPSize                 32                     # GOP Size (at maximum frame rate)
 IntraPeriod             -1                     # Intra Period
 NumberReferenceFrames   1                      # Number of reference pictures
-BaseLayerMode           0                      # Base layer mode (0:Scalable,
+BaseLayerMode           2                      # Base layer mode (0:Scalable,
                                                #   1:AVC compatible, 2:AVC w subseq SEI)
 
 #============================== MOTION SEARCH ==============================
@@ -31,20 +30,10 @@ LoopFilterAlphaC0Offset 0                      # AlphaOffset(-6..+6): valid rang
 LoopFilterBetaOffset    0                      # BetaOffset (-6..+6): valid range
 
 #============================== LAYER DEFINITION ==============================
-NumLayers               3                        # Number of layers
+NumLayers               6                        # Number of layers
 LayerCfg                ..\..\..\data\layer0.cfg # Layer configuration file
 LayerCfg                ..\..\..\data\layer1.cfg # Layer configuration file
 LayerCfg                ..\..\..\data\layer2.cfg # Layer configuration file
-#============================== ADAPTIVE GOP STRUCTURE ==============================
-UseAdaptiveGOP		    0                      # Use adaptive GOP structure (0: no, 1: yes)
-AGSModeDecision         0                      # Mode decision (0: AGS Coding, 1: Mode Dec)
-AGSGOPModeFile          ags_mode.dat           # GOP mode file
-
-#============================== WEIGHTED PREDICTION =================================
-WeightedPrediction      0                      # Sample Weighting Mode IP Slice (0:disable, 1:enable)
-WeightedBiprediction    0                      # Sample Weighting Mode B  Slice (0:disable, 1:explicit, 2:implicit)
-
-LARDO                   1                      # LARDO Enable
-
-#============ NON_REQUIRED =================
-NonRequiredEnable	    0                      # NonRequiredSEI enable (0:disable, 1:enable)
+LayerCfg                ..\..\..\data\layer3.cfg # Layer configuration file
+LayerCfg                ..\..\..\data\layer4.cfg # Layer configuration file
+LayerCfg                ..\..\..\data\layer5.cfg # Layer configuration file
