--- a/JSVM/H264Extension/data/layer2.cfg
+++ b/JSVM/H264Extension/data/layer2.cfg
@@ -1,44 +1,31 @@
 # Layer Configuration File
 
 #============================== INPUT / OUTPUT ==============================
-SourceWidth     528                     # Input  frame width
-SourceHeight    432                     # Input  frame height
+SourceWidth     352                     # Input  frame width
+SourceHeight    288                     # Input  frame height
 FrameRateIn     30                      # Input  frame rate [Hz]
 FrameRateOut    30                      # Output frame rate [Hz]
-InputFile       E:\CREW_528x432_30_orig_01.yuv     # Input  file
-ReconFile       rec_layer2.yuv # Reconstructed file
+InputFile       E:\Sequences\SVC\City_CIF30.yuv # Input  file
+ReconFile       rec_layer2.yuv          # Reconstructed file
 SymbolMode      1                       # 0=CAVLC, 1=CABAC
 
-#============================== DECOMPOSITION (MCTF) ==============================
-UpdateStep      0                       # Update Step (0: no 1: yes)
-ClosedLoop      1                       # Closed-loop control (0:off, 1:at H rate, 2: at L+H rate)
-AdaptiveQP      1                       # QP selection (0: standard, 1: adaptive)
-UseIntra        1                       # Intra mode usage (0: off, 1: on)
+#============================== CODING ==============================
+ClosedLoop      1                       # Closed-loop control (0,1:at H rate, 2: at L+H rate)
 FRExt           1                       # FREXT mode (0:off, 1:on)
+MaxDeltaQP      0                       # Max. absolute delta QP
+QP              36.0                    # Quantization parameters
+NumFGSLayers    0                       # Number of FGS layers ( 1 layer - ~ delta QP = 6 )
 
-#============================== CODING (MCTF) ==============================
-MaxDeltaQP      1                       # Max. absolute delta QP
-QP              23.0                    # Quantization parameters
-NumFGSLayers    0.0                     # Number of FGS layers ( 1 layer - ~ delta QP = 6 )
-
-#============================== CONTROL (MCTF) ==============================
-MeQP0           20.00                   # QP for motion estimation / mode decision (stage 0)
-MeQP1           20.00                   # QP for motion estimation / mode decision (stage 1)
-MeQP2           20.00                   # QP for motion estimation / mode decision (stage 2)
-MeQP3           20.00                   # QP for motion estimation / mode decision (stage 3)
-MeQP4           20.00                   # QP for motion estimation / mode decision (stage 4)
-MeQP5           20.00                   # QP for motion estimation / mode decision (stage 5)
+#============================== CONTROL ==============================
+MeQP0           36.00                   # QP for motion estimation / mode decision (stage 0)
+MeQP1           36.00                   # QP for motion estimation / mode decision (stage 1)
+MeQP2           36.00                   # QP for motion estimation / mode decision (stage 2)
+MeQP3           36.00                   # QP for motion estimation / mode decision (stage 3)
+MeQP4           36.00                   # QP for motion estimation / mode decision (stage 4)
+MeQP5           36.00                   # QP for motion estimation / mode decision (stage 5)
 
 InterLayerPred  2                       # Inter-layer Prediction (0: no, 1: yes, 2:adaptive)
 BaseQuality     3                       # Base quality level (0, 1, 2, 3) (0: no, 3, all) 
-DecodeLoops     2                       # Decoding loops (0:single, 1:mult for LP, 2:multiple)
+DecodeLoops     0                       # Decoding loops (0:single, 1:mult for LP, 2:multiple)
 
 MotionInfoMode  0                       # Motion Info Mode (0:no, 1:load, 2:save )
-MotionInfoFile  layer2.mot              # Motion Info File
-
-BaseLayerId     0                       # base layer
-PLR             20                       # Packet Loss Rate
-
-#=========== IDR ===========
-IDRPeriod      0                        # IDR period (should be integral times of GOP size)
-                                        # UseAdaptiveGOP should be 0
