--- a/Validation/SimuDataBase/Short_term/FMO/cfg/FMO.cfg
+++ b/Validation/SimuDataBase/Short_term/FMO/cfg/FMO.cfg
@@ -1,13 +1,14 @@
 # Scalable H.264/AVC Extension Configuration File
 
 #============================== GENERAL ==============================
-FrameRate               30.0                   # Maximum frame rate [Hz]
+OutputFile              str/FMO_2L_100f_FGS3.264 # Bitstream file
+FrameRate               15                   # Maximum frame rate [Hz]
 MaxDelay                1200.0                 # Maximum structural delay [ms]
-FramesToBeEncoded       15                     # Number of frames (at input frame rate)
-OutputFile              str/FMO.264            # Bitstream file
+FramesToBeEncoded       30                    # Number of frames (at input frame rate)
+QLevelEst               0                      # QualityLevel Estimation
 
 #============================== MCTF ==============================
-GOPSize                 16                     # GOP Size (at maximum frame rate)
+GOPSize                 8                     # GOP Size (at maximum frame rate)
 IntraPeriod             -1                     # Intra Period
 NumberReferenceFrames   1                      # Number of reference pictures
 BaseLayerMode           1                      # Base layer mode (0:Scalable,
@@ -24,13 +25,18 @@ BiPredIter              4                      # Max iterations for bi-pred sear
 IterSearchRange         8                      # Search range for iterations (0: normal)
 
 #============================== LOOP FILTER ==============================
-LoopFilterDisable       0                      # Loop filter idc (0: on, 1: off, 2:
+LoopFilterDisable       1                      # Loop filter idc (0: on, 1: off, 2:
                                                #   on except for slice boundaries)
 LoopFilterAlphaC0Offset 0                      # AlphaOffset(-6..+6): valid range
 LoopFilterBetaOffset    0                      # BetaOffset (-6..+6): valid range
 
 #============================== LAYER DEFINITION ==============================
 NumLayers               2                      # Number of layers
-LayerCfg                cfg/FMO_L0.cfg         # Layer configuration file
-LayerCfg                cfg/FMO_L1.cfg         # Layer configuration file
+LayerCfg                cfg/layer0.cfg    # Layer configuration file
+LayerCfg                cfg/layer1.cfg    # Layer configuration file
+
+#============================== ADAPTIVE GOP STRUCTURE ==============================
+UseAdaptiveGOP          0                      # Use adaptive GOP structure (0: no, 1: yes)
+AGSModeDecision         0                      # Mode decision (0: AGS Coding, 1: Mode Dec)
+AGSGOPModeFile          ags\CITY_ags.dat       # GOP mode file
 
