JVT-T058 (ICU) + some fixes for Validation Scripts and SoftwareManual

--- a/Validation/SimuDataBase/Short_term/FMO/cfg/layer1.cfg
+++ b/Validation/SimuDataBase/Short_term/FMO/cfg/layer1.cfg
@@ -47,3 +47,10 @@ SlcGrpChgDrFlag 0                                                 # slice_group_
 SlcGrpChgRtMus1 85                                                # slice_group_change_rate_minus1 
 SlcGrpCfgFileNm cfg/sgconf_layer1.cfg		  # SliceGroupConfigFileName,          : Used for slice_group_map_type 0, 2, 6
 UseRedundantSlc 0                                                 # UseRedundantSlice, 0: not used, 1: one redundant slice used for each slice (other modes not supported yet)
+
+#============================== CHROMA POSITION ===============================
+UseESS              1                   # ESS
+ESSChromaPhaseX     0                   # chroma phase x "0" or "-1", default = -1
+ESSBaseChromaPhaseX 0                   # base chroma phase x "0" or "-1", default = -1
+ESSCropWidth        352                 # cropping width
+ESSCropHeight       288                 # cropping height
