--- a/Validation/SimuDataBase/Short_term/IROI/cfg/IROI_L1.cfg
+++ b/Validation/SimuDataBase/Short_term/IROI/cfg/IROI_L1.cfg
@@ -40,3 +40,10 @@ SlcGrpMapType	0
 SlcGrpCfgFileNm	cfg/IROI_L1_SG.cfg      # Slice group configuration file
 SliceMode	4
 SliceArgument	6
+
+#============================== CHROMA POSITION ===============================
+UseESS              1                   # ESS
+ESSChromaPhaseX     0                   # chroma phase x "0" or "-1", default = -1
+ESSBaseChromaPhaseX 0                   # base chroma phase x "0" or "-1", default = -1
+ESSCropWidth        352                 # cropping width
+ESSCropHeight       288                 # cropping height
