--- a/Validation/SimuDataBase/Short_term/RPIC/cfg/RPIC_L1.cfg
+++ b/Validation/SimuDataBase/Short_term/RPIC/cfg/RPIC_L1.cfg
@@ -37,3 +37,10 @@ MotionInfoFile  mot/RPIC_L1.mot       # Motion Info File
 
 #============================== ERROR RESILIENCE ===========================
 UseRedundantSlc 1                       # Use redundant slice (0: OFF, 1: ON)
+
+#============================== CHROMA POSITION ===============================
+UseESS              1                   # ESS
+ESSChromaPhaseX     0                   # chroma phase x "0" or "-1", default = -1
+ESSBaseChromaPhaseX 0                   # base chroma phase x "0" or "-1", default = -1
+ESSCropWidth        352                 # cropping width
+ESSCropHeight       288                 # cropping height
