--- a/Validation/SimuDataBase/Short_term/T3/cfg/T3_L1.cfg
+++ b/Validation/SimuDataBase/Short_term/T3/cfg/T3_L1.cfg
@@ -34,5 +34,12 @@ BaseQuality     3                       # Base quality level (0, 1, 2, 3) (0: no
 MotionInfoMode  1                       # Motion Info Mode (0:no, 1:load, 2:save )
 MotionInfoFile  mot/T3_L1.mot       # Motion Info File
 
+#============================== CHROMA POSITION ===============================
+UseESS              1                   # ESS
+ESSChromaPhaseX     0                   # chroma phase x "0" or "-1", default = -1
+ESSBaseChromaPhaseX 0                   # base chroma phase x "0" or "-1", default = -1
+ESSCropWidth        160                 # cropping width
+ESSCropHeight       128                 # cropping height
+
 
 
