--- a/Validation/SimuDataBase/Short_term/T3/cfg/T3_L2.cfg
+++ b/Validation/SimuDataBase/Short_term/T3/cfg/T3_L2.cfg
@@ -34,3 +34,9 @@ BaseQuality     3                       # Base quality level (0, 1, 2, 3) (0: no
 MotionInfoMode  1                       # Motion Info Mode (0:no, 1:load, 2:save )
 MotionInfoFile  mot/T3_L2.mot           # Motion Info File
 
+#============================== CHROMA POSITION ===============================
+UseESS              1                   # ESS
+ESSChromaPhaseX     0                   # chroma phase x "0" or "-1", default = -1
+ESSBaseChromaPhaseX 0                   # base chroma phase x "0" or "-1", default = -1
+ESSCropWidth        320                 # cropping width
+ESSCropHeight       256                 # cropping height
