--- a/Validation/SimuDataBase/Short_term/FMO/cfg/FMO_L1.cfg
+++ b/Validation/SimuDataBase/Short_term/FMO/cfg/FMO_L1.cfg
@@ -38,3 +38,9 @@ MotionInfoMode  0                       # Motion Info Mode (0:no, 1:load, 2:save
 NumSlicGrpMns1	2
 SlcGrpMapType	1
 
+#============================== CHROMA POSITION ===============================
+UseESS              1                   # ESS
+ESSChromaPhaseX     0                   # chroma phase x "0" or "-1", default = -1
+ESSBaseChromaPhaseX 0                   # base chroma phase x "0" or "-1", default = -1
+ESSCropWidth        352                 # cropping width
+ESSCropHeight       288                 # cropping height
