--- a/Validation/SimuDataBase/Short_term/FragVLC/cfg/FragVLC_L1.cfg
+++ b/Validation/SimuDataBase/Short_term/FragVLC/cfg/FragVLC_L1.cfg
@@ -35,3 +35,10 @@ InterLayerPred  2                       # Inter-layer Prediction (0: no, 1: yes,
 BaseQuality     3                       # Base quality level (0, 1, 2, 3) (0: no, 3, all) 
 
 MotionInfoMode  0                       # Motion Info Mode (0:no, 1:load, 2:save )
+
+#============================== CHROMA POSITION ===============================
+UseESS              1                   # ESS
+ESSChromaPhaseX     0                   # chroma phase x "0" or "-1", default = -1
+ESSBaseChromaPhaseX 0                   # base chroma phase x "0" or "-1", default = -1
+ESSCropWidth        352                 # cropping width
+ESSCropHeight       288                 # cropping height
