--- a/Validation/SimuDataBase/Short_term/NonRequired/cfg/NonRequired_L1.cfg
+++ b/Validation/SimuDataBase/Short_term/NonRequired/cfg/NonRequired_L1.cfg
@@ -39,3 +39,9 @@ MotionInfoMode  2                       # Motion Info Mode (0:no, 1:load, 2:save
 #=========== IDR ===========
 IDRPeriod      0                       # IDR period (should be integral times of GOP size)
                                         # UseAdaptiveGOP should be 0
+#============================== CHROMA POSITION ===============================
+UseESS              1                   # ESS
+ESSChromaPhaseX     0                   # chroma phase x "0" or "-1", default = -1
+ESSBaseChromaPhaseX 0                   # base chroma phase x "0" or "-1", default = -1
+ESSCropWidth        352                 # cropping width
+ESSCropHeight       288                 # cropping height
