--- a/JSVM/H264Extension/data/encoder.cfg
+++ b/JSVM/H264Extension/data/encoder.cfg
@@ -2,15 +2,15 @@
 
 #============================== GENERAL ==============================
 OutputFile              test.264               # Bitstream file
-FrameRate               15                     # Maximum frame rate [Hz]
+FrameRate               30                     # Maximum frame rate [Hz]
 MaxDelay                1200.0                 # Maximum structural delay [ms]
-FramesToBeEncoded       25                     # Number of frames (at input frame rate)
+FramesToBeEncoded       9                     # Number of frames (at input frame rate)
 
 #============================== MCTF ==============================
-GOPSize                 8                     # GOP Size (at maximum frame rate)
+GOPSize                 4                     # GOP Size (at maximum frame rate)
 IntraPeriod             16                     # Intra Period
 NumberReferenceFrames   1                      # Number of reference pictures
-BaseLayerMode           2                      # Base layer mode (0:Scalable,
+BaseLayerMode           0                      # Base layer mode (0:AVC w large DPB,
                                                #   1:AVC compatible, 2:AVC w subseq SEI)
 
 #============================== MOTION SEARCH ==============================
@@ -22,7 +22,6 @@ SearchFuncSubPel        2                      # Search function sub pel
 SearchRange             32                     # Search range (Full Pel)
 BiPredIter              4                      # Max iterations for bi-pred search
 IterSearchRange         8                      # Search range for iterations (0: normal)
-
 #============================== LOOP FILTER ==============================
 LoopFilterDisable       0                      # Loop filter idc (0: on, 1: off, 2:
                                                #   on except for slice boundaries)
@@ -30,7 +29,9 @@ LoopFilterAlphaC0Offset 0                      # AlphaOffset(-6..+6): valid rang
 LoopFilterBetaOffset    0                      # BetaOffset (-6..+6): valid range
 
 #============================== LAYER DEFINITION ==============================
-NumLayers               3                        # Number of layers
+NumLayers               1                        # Number of layers
 LayerCfg                ..\..\..\data\layer0.cfg # Layer configuration file
-LayerCfg                ..\..\..\data\layer1.cfg # Layer configuration file
-LayerCfg                ..\..\..\data\layer2.cfg # Layer configuration file
+#LayerCfg                ..\..\..\data\layer1.cfg # Layer configuration file
+
+SuffixUnitEnable        1                      # Add suffix unit (0: off, 1: on) shall always be on in SVC contexts (i.e. when there are FGS/CGS/spatial enhancement layers)
+MMCOBaseEnable          1                      # MMCO for base representation (0: off, 1: on)
