JSVM_6_8 Error concealment bug fixes

--- a/JSVM/H264Extension/data/encoder.cfg
+++ b/JSVM/H264Extension/data/encoder.cfg
@@ -1,14 +1,14 @@
 # Scalable H.264/AVC Extension Configuration File
 
 #============================== GENERAL ==============================
-OutputFile              test.264               # Bitstream file
-FrameRate               30                     # Maximum frame rate [Hz]
+OutputFile              foreman.gop4.l1.itra1.b1.f65.2fgs.264               # Bitstream file
+FrameRate               15                     # Maximum frame rate [Hz]
 MaxDelay                1200.0                 # Maximum structural delay [ms]
-FramesToBeEncoded       9                     # Number of frames (at input frame rate)
+FramesToBeEncoded       65                     # Number of frames (at input frame rate)
 
 #============================== MCTF ==============================
-GOPSize                 4                     # GOP Size (at maximum frame rate)
-IntraPeriod             16                     # Intra Period
+GOPSize                 1                     # GOP Size (at maximum frame rate)
+IntraPeriod             -1                     # Intra Period
 NumberReferenceFrames   1                      # Number of reference pictures
 BaseLayerMode           0                      # Base layer mode (0:AVC w large DPB,
                                                #   1:AVC compatible, 2:AVC w subseq SEI)
@@ -29,9 +29,9 @@ LoopFilterAlphaC0Offset 0                      # AlphaOffset(-6..+6): valid rang
 LoopFilterBetaOffset    0                      # BetaOffset (-6..+6): valid range
 
 #============================== LAYER DEFINITION ==============================
-NumLayers               1                        # Number of layers
-LayerCfg                ..\..\..\data\layer0.cfg # Layer configuration file
-#LayerCfg                ..\..\..\data\layer1.cfg # Layer configuration file
+NumLayers               2                        # Number of layers
+LayerCfg                ..\JSVM\H264Extension\data\layer0.cfg # Layer configuration file
+LayerCfg                ..\JSVM\H264Extension\data\layer1.cfg # Layer configuration file
 
 SuffixUnitEnable        1                      # Add suffix unit (0: off, 1: on) shall always be on in SVC contexts (i.e. when there are FGS/CGS/spatial enhancement layers)
 MMCOBaseEnable          1                      # MMCO for base representation (0: off, 1: on)
