--- a/JSVM/H264Extension/data/layer0.cfg
+++ b/JSVM/H264Extension/data/layer0.cfg
@@ -5,7 +5,7 @@ SourceWidth     176                     # Input  frame width
 SourceHeight    144                     # Input  frame height
 FrameRateIn     15                      # Input  frame rate [Hz]
 FrameRateOut    15                      # Output frame rate [Hz]
-InputFile       \\bslinux2\data\svc\MOBILE_QCIF15.yuv # Input  file
+InputFile       foreman_176x144_30.yuv # Input  file
 ReconFile       rec_layer0.yuv          # Reconstructed file
 SymbolMode      1                       # 0=CAVLC, 1=CABAC
 
