--- a/JSVM/H264Extension/data/layer1.cfg
+++ b/JSVM/H264Extension/data/layer1.cfg
@@ -1,11 +1,11 @@
 # Layer Configuration File
 
 #============================== INPUT / OUTPUT ==============================
-SourceWidth     176                     # Input  frame width
-SourceHeight    144                     # Input  frame height
+SourceWidth     352                     # Input  frame width
+SourceHeight    288                     # Input  frame height
 FrameRateIn     15                      # Input  frame rate [Hz]
 FrameRateOut    15                      # Output frame rate [Hz]
-InputFile       \\bslinux2\data\svc\MOBILE_QCIF15.yuv # Input  file
+InputFile       foreman_352x288_30.yuv # Input  file
 ReconFile       rec_layer1.yuv          # Reconstructed file
 SymbolMode      1                       # 0=CAVLC, 1=CABAC
 
