*** empty log message ***

--- a/Validation/SimuDataBase/Short_term/EIDR/cfg/EIDR_L1.cfg
+++ b/Validation/SimuDataBase/Short_term/EIDR/cfg/EIDR_L1.cfg
@@ -33,17 +33,10 @@ MeQP5           30.00                   # QP for motion estimation / mode decisi
 
 InterLayerPred  2                       # Inter-layer Prediction (0: no, 1: yes, 2:adaptive)
 BaseQuality     3                       # Base quality level (0, 1, 2, 3) (0: no, 3, all) 
+DecodeLoops     0                       # Decoding loops (0:single, 1:mult for LP, 2:multiple)
 
 MotionInfoMode  2                       # Motion Info Mode (0:no, 1:load, 2:save )
 
 #=========== IDR ===========
 IDRPeriod      8                       # IDR period (should be integral times of GOP size)
                                         # UseAdaptiveGOP should be 0
-
-#============================== CHROMA POSITION ===============================
-UseESS              1                   # ESS
-ESSChromaPhaseX     0                   # chroma phase x "0" or "-1", default = -1
-ESSBaseChromaPhaseX 0                   # base chroma phase x "0" or "-1", default = -1
-ESSCropWidth        352                 # cropping width
-ESSCropHeight       288                 # cropping height
-
