--- a/JSVM/H264Extension/data/encoder.cfg
+++ b/JSVM/H264Extension/data/encoder.cfg
@@ -4,10 +4,11 @@
 OutputFile              test.264               # Bitstream file
 FrameRate               15                     # Maximum frame rate [Hz]
 MaxDelay                1200.0                 # Maximum structural delay [ms]
-FramesToBeEncoded       65                     # Number of frames (at input frame rate)
+FramesToBeEncoded       33                     # Number of frames (at input frame rate)
+CgsSnrRefinement        1                      # (0:SNR layers as CGS, 1:SNR layers as MGS)
 
 #============================== MCTF ==============================
-GOPSize                 1                      # GOP Size (at maximum frame rate)
+GOPSize                 16                     # GOP Size (at maximum frame rate)
 IntraPeriod             -1                     # Intra Period
 NumberReferenceFrames   1                      # Number of reference pictures
 BaseLayerMode           0                      # Base layer mode (0:AVC w large DPB,
@@ -30,8 +31,8 @@ LoopFilterBetaOffset    0                      # BetaOffset (-6..+6): valid rang
 
 #============================== LAYER DEFINITION ==============================
 NumLayers               2                        # Number of layers
-LayerCfg                ..\JSVM\H264Extension\data\layer0.cfg # Layer configuration file
-LayerCfg                ..\JSVM\H264Extension\data\layer1.cfg # Layer configuration file
+LayerCfg                ..\..\..\data\layer0.cfg # Layer configuration file
+LayerCfg                ..\..\..\data\layer1.cfg # Layer configuration file
 
 SuffixUnitEnable        1                      # Add suffix unit (0: off, 1: on) shall always be on in SVC contexts (i.e. when there are FGS/CGS/spatial enhancement layers)
 MMCOBaseEnable          1                      # MMCO for base representation (0: off, 1: on)
