--- a/JSVM/H264Extension/data/layer1.cfg
+++ b/JSVM/H264Extension/data/layer1.cfg
@@ -5,7 +5,7 @@ SourceWidth     176                     # Input  frame width
 SourceHeight    144                     # Input  frame height
 FrameRateIn     15                      # Input  frame rate [Hz]
 FrameRateOut    15                      # Output frame rate [Hz]
-InputFile       ..\..\..\..\..\SVC\MOBILE_QCIF15.yuv # Input  file
+InputFile       \\bslinux2\data\svc\MOBILE_QCIF15.yuv # Input  file
 ReconFile       rec_layer1.yuv          # Reconstructed file
 SymbolMode      1                       # 0=CAVLC, 1=CABAC
 
@@ -13,17 +13,18 @@ SymbolMode      1                       # 0=CAVLC, 1=CABAC
 ClosedLoop      1                       # Closed-loop control (0,1:at H rate, 2: at L+H rate)
 FRExt           0                       # FREXT mode (0:off, 1:on)
 MaxDeltaQP      0                       # Max. absolute delta QP
-QP              20.0                    # Quantization parameters
-NumFGSLayers    2                       # Number of FGS layers ( 1 layer - ~ delta QP = 6 )
-FGSMotion       1                       # motion refinement in FGS layers (0:off, 1:on)
+QP              28.0                    # Quantization parameters
+NumFGSLayers    0                       # Number of FGS layers ( 1 layer - ~ delta QP = 6 )
+FGSMotion       0                       # motion refinement in FGS layers (0:off, 1:on)
 
 #============================== CONTROL ==============================
-MeQP0           20.00                   # QP for motion estimation / mode decision (stage 0)
-MeQP1           20.00                   # QP for motion estimation / mode decision (stage 1)
-MeQP2           20.00                   # QP for motion estimation / mode decision (stage 2)
-MeQP3           20.00                   # QP for motion estimation / mode decision (stage 3)
-MeQP4           20.00                   # QP for motion estimation / mode decision (stage 4)
-MeQP5           20.00                   # QP for motion estimation / mode decision (stage 5)
+MeQP0           28.00                   # QP for motion estimation / mode decision (stage 0)
+MeQP1           28.00                   # QP for motion estimation / mode decision (stage 1)
+MeQP2           28.00                   # QP for motion estimation / mode decision (stage 2)
+MeQP3           28.00                   # QP for motion estimation / mode decision (stage 3)
+MeQP4           28.00                   # QP for motion estimation / mode decision (stage 4)
+MeQP5           28.00                   # QP for motion estimation / mode decision (stage 5)
 
 InterLayerPred  2                       # Inter-layer Prediction (0: no, 1: yes, 2:adaptive)
 BaseQuality     3                       # Base quality level (0, 1, 2, 3) (0: no, 3, all) 
+
