--- a/JSVM/H264Extension/data/layer0.cfg
+++ b/JSVM/H264Extension/data/layer0.cfg
@@ -10,11 +10,11 @@ ReconFile       rec_layer0.yuv          # Reconstructed file
 SymbolMode      1                       # 0=CAVLC, 1=CABAC
 
 #============================== CODING ==============================
-ClosedLoop      1                       # Closed-loop control (0,1:at H rate, 2: at L+H rate)
-FRExt           0                       # FREXT mode (0:off, 1:on)
-MaxDeltaQP      0                       # Max. absolute delta QP
-QP              34.0                    # Quantization parameters
-NumFGSLayers    0                       # Number of FGS layers ( 1 layer - ~ delta QP = 6 )
+ClosedLoop      2                       # Closed-loop control (0,1:at H rate, 2: at L+H rate)
+FRExt           1                       # FREXT mode (0:off, 1:on)
+MaxDeltaQP      1                       # Max. absolute delta QP
+QP              35.0                    # Quantization parameters
+NumFGSLayers    2                       # Number of FGS layers ( 1 layer - ~ delta QP = 6 )
 FGSMotion       0                       # motion refinement in FGS layers (0:off, 1:on)
 
 #============================== CONTROL ==============================
@@ -27,4 +27,9 @@ MeQP5           34.00                   # QP for motion estimation / mode decisi
 
 InterLayerPred  0                       # Inter-layer Prediction (0: no, 1: yes, 2:adaptive)
 BaseQuality     3                       # Base quality level (0, 1, 2, 3) (0: no, 3, all) 
+
+FGSVectorMode  	1
+FGSVector0	    1
+FGSVector1	    3
+FGSVector2	    12
 
