JSVM_8_0 : interlaced bug fixing + memory problems fixing + .Net2005 (projects and solution) providing + removal of carriage return in .cfg files of validation scripts

--- a/JSVM/H264Extension/src/lib/H264AVCCommonLib/H264AVCCommonLibStatic.vcproj
+++ b/JSVM/H264Extension/src/lib/H264AVCCommonLib/H264AVCCommonLibStatic.vcproj
@@ -4,7 +4,9 @@
 	Version="7.10"
 	Name="H264AVCCommonLibStatic"
 	SccProjectName="H264AVCCommonLibStatic"
-	SccLocalPath="..\..\..">
+	SccAuxPath=""
+	SccLocalPath="..\..\.."
+	SccProvider="MSSCCI:Microsoft Visual SourceSafe">
 	<Platforms>
 		<Platform
 			Name="Win32"/>
@@ -942,6 +944,9 @@
 			</File>
 			<File
 				RelativePath="..\..\..\include\H264AVCCommonLib\CabacTables.h">
+			</File>
+			<File
+				RelativePath="..\..\..\include\H264AVCCommonLib\CFMO.h">
 			</File>
 			<File
 				RelativePath="..\..\..\include\H264AVCCommonLib\CommonBuffers.h">
