--- a/Validation/SimuDataBase/Short_term/BaseId/cfg/BaseId_L0.cfg
+++ b/Validation/SimuDataBase/Short_term/BaseId/cfg/BaseId_L0.cfg
@@ -5,11 +5,9 @@ SourceWidth     176                     # Input  frame width
 SourceHeight    144                     # Input  frame height
 FrameRateIn     15                      # Input  frame rate [Hz]
 FrameRateOut    15                      # Output frame rate [Hz]
-InputFile       orig/BaseId_176x144_15.yuv
-                                        # Input  file
-ReconFile       tmp/BaseId_rec_L0.yuv    
-                                        # Reconstructed file
-SymbolMode	0			# (0:CAVLC, 1:CABAC)
+InputFile       orig/BaseId_176x144_15.yuv # Input  file
+ReconFile       tmp/BaseId_rec_L0.yuv      # Reconstructed file
+SymbolMode	    0			                     # (0:CAVLC, 1:CABAC)
 
 #============================== DECOMPOSITION (MCTF) ==============================
 UpdateStep      0                       # Update Step (0: no 1: yes)
