--- a/Validation/SimuDataBase/Short_term/BaseId/cfg/BaseId_L2.cfg
+++ b/Validation/SimuDataBase/Short_term/BaseId/cfg/BaseId_L2.cfg
@@ -5,10 +5,8 @@ SourceWidth     352                     # Input  frame width
 SourceHeight    288                     # Input  frame height
 FrameRateIn     30                      # Input  frame rate [Hz]
 FrameRateOut    30                      # Output frame rate [Hz]
-InputFile       orig/BaseId_352x288_30.yuv
-                                        # Input  file
-ReconFile       tmp/BaseId_rec_L2.yuv    
-                                        # Reconstructed file
+InputFile       orig/BaseId_352x288_30.yuv # Input  file
+ReconFile       tmp/BaseId_rec_L2.yuv      # Reconstructed file
 SymbolMode	1			# (0:CAVLC, 1:CABAC)
 
 #============================== DECOMPOSITION (MCTF) ==============================
