--- a/Validation/SimuDataBase/Short_term/LARDO/cfg/LARDO_L2.cfg
+++ b/Validation/SimuDataBase/Short_term/LARDO/cfg/LARDO_L2.cfg
@@ -5,10 +5,8 @@ SourceWidth     528                     # Input  frame width
 SourceHeight    432                     # Input  frame height
 FrameRateIn     30                      # Input  frame rate [Hz]
 FrameRateOut    30                      # Output frame rate [Hz]
-InputFile       orig/LARDO_528x432_30.yuv
-                                        # Input  file
-ReconFile       tmp/LARDO_rec_L2.yuv    
-                                        # Reconstructed file
+InputFile       orig/LARDO_528x432_30.yuv # Input  file
+ReconFile       tmp/LARDO_rec_L2.yuv      # Reconstructed file
 SymbolMode	0			# (0:CAVLC, 1:CABAC)
 
 #============================== DECOMPOSITION (MCTF) ==============================
