--- a/Validation/SimuDataBase/Short_term/SmoothedRef/cfg/SmoothedRef_L0.cfg
+++ b/Validation/SimuDataBase/Short_term/SmoothedRef/cfg/SmoothedRef_L0.cfg
@@ -5,10 +5,8 @@ SourceWidth     176                     # Input  frame width
 SourceHeight    144                     # Input  frame height
 FrameRateIn     15                      # Input  frame rate [Hz]
 FrameRateOut    15                      # Output frame rate [Hz]
-InputFile       orig/SmoothedRef_176x144_15.yuv
-                                        # Input  file
-ReconFile       tmp/SmoothedRef_rec_L0.yuv    
-                                        # Reconstructed file
+InputFile       orig/SmoothedRef_176x144_15.yuv  # Input  file
+ReconFile       tmp/SmoothedRef_rec_L0.yuv       # Reconstructed file
 SymbolMode	1			# (0:CAVLC, 1:CABAC)
 
 #============================== DECOMPOSITION (MCTF) ==============================
