--- a/JSVM/H264Extension/src/test/BitStreamExtractor/BitStreamExtractor.vcproj
+++ b/JSVM/H264Extension/src/test/BitStreamExtractor/BitStreamExtractor.vcproj
@@ -41,7 +41,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="ws2_32.lib ddraw.lib odbc32.lib odbccp32.lib"
+				AdditionalDependencies="ws2_32.lib odbc32.lib odbccp32.lib"
 				OutputFile="..\..\..\..\..\bin\BitStreamExtractorStaticd.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
@@ -107,7 +107,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="ws2_32.lib ddraw.lib odbc32.lib odbccp32.lib"
+				AdditionalDependencies="ws2_32.lib odbc32.lib odbccp32.lib"
 				OutputFile="..\..\..\..\..\bin\BitStreamExtractorStatic.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
