--- a/JSVM/H264Extension/src/test/FixedQPEncoder/FixedQPEncoder.vcproj
+++ b/JSVM/H264Extension/src/test/FixedQPEncoder/FixedQPEncoder.vcproj
@@ -38,7 +38,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="ws2_32.lib ddraw.lib odbc32.lib odbccp32.lib"
+				AdditionalDependencies="ws2_32.lib  odbc32.lib odbccp32.lib"
 				OutputFile="..\..\..\..\..\bin\FixedQPEncoderStatic.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
@@ -97,7 +97,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="ws2_32.lib ddraw.lib odbc32.lib odbccp32.lib"
+				AdditionalDependencies="ws2_32.lib  odbc32.lib odbccp32.lib"
 				OutputFile="..\..\..\..\..\bin\FixedQPEncoderStaticd.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
