--- a/JSVM/H264Extension/src/test/H264AVCDecoderLibTest/H264AVCDecoderLibTestStatic.vcproj
+++ b/JSVM/H264Extension/src/test/H264AVCDecoderLibTest/H264AVCDecoderLibTestStatic.vcproj
@@ -42,7 +42,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="ws2_32.lib ddraw.lib odbc32.lib odbccp32.lib"
+				AdditionalDependencies="ws2_32.lib odbc32.lib odbccp32.lib"
 				OutputFile="..\..\..\..\..\bin\H264AVCDecoderLibTestStatic.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
@@ -105,7 +105,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="ws2_32.lib ddraw.lib odbc32.lib odbccp32.lib"
+				AdditionalDependencies="ws2_32.lib odbc32.lib odbccp32.lib"
 				OutputFile="..\..\..\..\..\bin\H264AVCDecoderLibTestStaticd.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
