--- a/JSVM/H264Extension/src/test/H264AVCEncoderLibTest/H264AVCEncoderLibTestStatic.vcproj
+++ b/JSVM/H264Extension/src/test/H264AVCEncoderLibTest/H264AVCEncoderLibTestStatic.vcproj
@@ -40,7 +40,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="ddraw.lib odbc32.lib odbccp32.lib"
+				AdditionalDependencies="odbc32.lib odbccp32.lib"
 				OutputFile="..\..\..\..\..\bin\H264AVCEncoderLibTestStaticd.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
@@ -106,7 +106,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="ddraw.lib odbc32.lib odbccp32.lib"
+				AdditionalDependencies="odbc32.lib odbccp32.lib"
 				OutputFile="..\..\..\..\..\bin\H264AVCEncoderLibTestStatic.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
