--- a/Validation/SimuDataBase/Short_term/ARFGS/cfg/ARFGS_L0.cfg
+++ b/Validation/SimuDataBase/Short_term/ARFGS/cfg/ARFGS_L0.cfg
@@ -5,10 +5,8 @@ SourceWidth     176                     # Input  frame width
 SourceHeight    144                     # Input  frame height
 FrameRateIn     30                      # Input  frame rate [Hz]
 FrameRateOut    30                      # Output frame rate [Hz]
-InputFile       orig/ARFGS_176x144_30.yuv
-                                        # Input  file
-ReconFile       tmp/ARFGS_rec_L0.yuv    
-                                        # Reconstructed file
+InputFile       orig/ARFGS_176x144_30.yuv # Input  file
+ReconFile       tmp/ARFGS_rec_L0.yuv      # Reconstructed file
 SymbolMode	0			# (0:CAVLC, 1:CABAC)
 
 #============================== DECOMPOSITION (MCTF) ==============================
