--- a/Validation/SimuDataBase/Short_term/CAFVLC/cfg/CAFVLC_L0.cfg
+++ b/Validation/SimuDataBase/Short_term/CAFVLC/cfg/CAFVLC_L0.cfg
@@ -5,11 +5,9 @@ SourceWidth     352                     # Input  frame width
 SourceHeight    288                     # Input  frame height
 FrameRateIn     30                      # Input  frame rate [Hz]
 FrameRateOut    30                      # Output frame rate [Hz]
-InputFile       orig/CAFVLC_352x288_30.yuv
-                                        # Input  file
-ReconFile       tmp/CAFVLC_rec_L0.yuv    
-                                        # Reconstructed file
-SymbolMode	0			# (0:CAVLC, 1:CABAC)
+InputFile       orig/CAFVLC_352x288_30.yuv # Input  file
+ReconFile       tmp/CAFVLC_rec_L0.yuv      # Reconstructed file
+SymbolMode    	0			                     # (0:CAVLC, 1:CABAC)
 
 #============================== DECOMPOSITION (MCTF) ==============================
 UpdateStep      0                       # Update Step (0: no 1: yes)
