--- a/Validation/SimuDataBase/Short_term/ESS/cfg/ESS_L0.cfg
+++ b/Validation/SimuDataBase/Short_term/ESS/cfg/ESS_L0.cfg
@@ -5,10 +5,8 @@ SourceWidth     128                     # Input  frame width
 SourceHeight    96                      # Input  frame height
 FrameRateIn     15                      # Input  frame rate [Hz]
 FrameRateOut    15                      # Output frame rate [Hz]
-InputFile       orig/ESS_128x96_15.yuv
-                                        # Input  file
-ReconFile       tmp/ESS_rec_L0.yuv    
-                                        # Reconstructed file
+InputFile       orig/ESS_128x96_15.yuv  # Input  file
+ReconFile       tmp/ESS_rec_L0.yuv      # Reconstructed file
 SymbolMode	0			# (0:CAVLC, 1:CABAC)
 
 #============================== DECOMPOSITION (MCTF) ==============================
