--- a/Validation/SimuDataBase/Short_term/ESS2/cfg/ESS2_L1.cfg
+++ b/Validation/SimuDataBase/Short_term/ESS2/cfg/ESS2_L1.cfg
@@ -5,10 +5,8 @@ SourceWidth     352                     # Input  frame width
 SourceHeight    288                     # Input  frame height
 FrameRateIn     15                      # Input  frame rate [Hz]
 FrameRateOut    15                      # Output frame rate [Hz]
-InputFile       orig/ESS2_352x288_15.yuv
-                                        # Input  file
-ReconFile       tmp/ESS2_rec_L1.yuv    
-                                        # Reconstructed file
+InputFile       orig/ESS2_352x288_15.yuv # Input  file
+ReconFile       tmp/ESS2_rec_L1.yuv      # Reconstructed file
 SymbolMode	1			# (0:CAVLC, 1:CABAC)
 
 #============================== DECOMPOSITION (MCTF) ==============================
