--- a/Validation/SimuDataBase/Short_term/FMO/cfg/FMO_L1.cfg
+++ b/Validation/SimuDataBase/Short_term/FMO/cfg/FMO_L1.cfg
@@ -5,8 +5,7 @@ SourceWidth     352                     # Input  frame width
 SourceHeight    288                     # Input  frame height
 FrameRateIn     30                      # Input  frame rate [Hz]
 FrameRateOut    30                      # Output frame rate [Hz]
-InputFile       orig/FMO_352x288_30.yuv
-                                        # Input  file
+InputFile       orig/FMO_352x288_30.yuv # Input  file
 ReconFile       tmp/FMO_rec_L1.yuv    # Reconstructed file
 SymbolMode	1			# (0:CAVLC, 1:CABAC)
 
