--- a/Validation/SimuDataBase/Short_term/FragVLC/cfg/FragVLC_L0.cfg
+++ b/Validation/SimuDataBase/Short_term/FragVLC/cfg/FragVLC_L0.cfg
@@ -5,10 +5,8 @@ SourceWidth     176                     # Input  frame width
 SourceHeight    144                     # Input  frame height
 FrameRateIn     15                      # Input  frame rate [Hz]
 FrameRateOut    15                      # Output frame rate [Hz]
-InputFile       orig/FragVLC_176x144_15.yuv
-                                        # Input  file
-ReconFile       tmp/FragVLC_rec_L0.yuv    
-                                        # Reconstructed file
+InputFile       orig/FragVLC_176x144_15.yuv # Input  file
+ReconFile       tmp/FragVLC_rec_L0.yuv      # Reconstructed file
 SymbolMode	0			# (0:CAVLC, 1:CABAC)
 
 #============================== DECOMPOSITION (MCTF) ==============================
