--- a/Validation/SimuDataBase/Short_term/IROI/cfg/IROI_L1.cfg
+++ b/Validation/SimuDataBase/Short_term/IROI/cfg/IROI_L1.cfg
@@ -5,10 +5,9 @@ SourceWidth     352                     # Input  frame width
 SourceHeight    288                     # Input  frame height
 FrameRateIn     30                      # Input  frame rate [Hz]
 FrameRateOut    30                      # Output frame rate [Hz]
-InputFile       orig/IROI_352x288_30.yuv
-                                        # Input  file
-ReconFile       tmp/IROI_rec_L1.yuv    # Reconstructed file
-SymbolMode	1			# (0:CAVLC, 1:CABAC)
+InputFile       orig/IROI_352x288_30.yuv # Input  file
+ReconFile       tmp/IROI_rec_L1.yuv      # Reconstructed file
+SymbolMode	1			                       # (0:CAVLC, 1:CABAC) 
 
 #============================== DECOMPOSITION (MCTF) ==============================
 UpdateStep      0                       # Update Step (0: no 1: yes)
