--- a/Validation/SimuDataBase/Short_term/LARDO/cfg/LARDO_L1.cfg
+++ b/Validation/SimuDataBase/Short_term/LARDO/cfg/LARDO_L1.cfg
@@ -5,10 +5,8 @@ SourceWidth     352                     # Input  frame width
 SourceHeight    288                     # Input  frame height
 FrameRateIn     30                      # Input  frame rate [Hz]
 FrameRateOut    30                      # Output frame rate [Hz]
-InputFile       orig/LARDO_352x288_30.yuv
-                                        # Input  file
-ReconFile       tmp/LARDO_rec_L1.yuv    
-                                        # Reconstructed file
+InputFile       orig/LARDO_352x288_30.yuv # Input  file
+ReconFile       tmp/LARDO_rec_L1.yuv      # Reconstructed file
 SymbolMode	0			# (0:CAVLC, 1:CABAC)
 
 #============================== DECOMPOSITION (MCTF) ==============================
