--- a/Validation/SimuDataBase/Short_term/SLoop/cfg/SLoop_L1.cfg
+++ b/Validation/SimuDataBase/Short_term/SLoop/cfg/SLoop_L1.cfg
@@ -5,10 +5,8 @@ SourceWidth     176                     # Input  frame width
 SourceHeight    144                     # Input  frame height
 FrameRateIn     15                      # Input  frame rate [Hz]
 FrameRateOut    15                      # Output frame rate [Hz]
-InputFile       orig/SLoop_176x144_15.yuv
-                                        # Input  file
-ReconFile       tmp/SLoop_rec_L1.yuv    
-                                        # Reconstructed file
+InputFile       orig/SLoop_176x144_15.yuv # Input  file
+ReconFile       tmp/SLoop_rec_L1.yuv      # Reconstructed file
 SymbolMode	1			# (0:CAVLC, 1:CABAC)
 
 #============================== DECOMPOSITION (MCTF) ==============================
