--- a/Validation/SimuDataBase/Short_term/SLoop/cfg/SLoop_L2.cfg
+++ b/Validation/SimuDataBase/Short_term/SLoop/cfg/SLoop_L2.cfg
@@ -5,10 +5,8 @@ SourceWidth     352                     # Input  frame width
 SourceHeight    288                     # Input  frame height
 FrameRateIn     15                      # Input  frame rate [Hz]
 FrameRateOut    15                      # Output frame rate [Hz]
-InputFile       orig/SLoop_352x288_15.yuv
-                                        # Input  file
-ReconFile       tmp/SLoop_rec_L2.yuv    
-                                        # Reconstructed file
+InputFile       orig/SLoop_352x288_15.yuv # Input  file
+ReconFile       tmp/SLoop_rec_L2.yuv      # Reconstructed file
 SymbolMode	0			# (0:CAVLC, 1:CABAC)
 
 #============================== DECOMPOSITION (MCTF) ==============================
